crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_long_string.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr('this is a very long string for testing purposes', 10, 8) as result\""
---
Ok(
    [
        "+----------+",
        "| result   |",
        "+----------+",
        "|  very lo |",
        "+----------+",
    ],
)
