crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_negative_index_multiple.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr('mystring', -3, 2) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| in     |",
        "+--------+",
    ],
)
