crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_negative_length_error.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr('mystring', 1, -1) as result\""
---
Ok(
    [
        "+----------+",
        "| result   |",
        "+----------+",
        "| mystring |",
        "+----------+",
    ],
)
