crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_out_of_bounds_negative.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr('mystring', -20, 3) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "|        |",
        "+--------+",
    ],
)
