crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_unicode_chars.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr('héllo🌏world', 3, 4) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| llo🌏  |",
        "+--------+",
    ],
)
