crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_unicode_negative.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr('héllo🌏world', -3, 2) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| rl     |",
        "+--------+",
    ],
)
